--- a/FS-MERN-B111A-JAN/crud-operation/backend/.env
+++ b/FS-MERN-B111A-JAN/crud-operation/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb+srv://rajsantra8:FrwBx4kUB2I1ZgwM@cluster0.8xwfjrs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://rajsantra8:Us6654o3Kzt5fHn2@cluster0.8xwfjrs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 4700
 JWT_SECRET = GJGJHJKKNVV
